# ChangeLog for sci-chemistry/camshift
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Feb 2013; Justin Lecher <jlec@gentoo.org> +files/1.35.0-gcc47.patch,
  files/1.35.0-gentoo.patch, camshift-1.35.0.ebuild, metadata.xml:
  Bump to EAPI=5; add missing deps; fix for gcc-4.7

*camshift-1.35.0 (27 Jan 2011)

  27 Jan 2011; Justin Lecher <jlec@gentoo.org> +files/1.35.0-gentoo.patch,
  +camshift-1.35.0.ebuild, +metadata.xml:
  New addition, written by me
