@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/camshift
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Feb 2015; Marius Brehler <marbre@linux.sungazer.de>
+  libsfmt-1.3.0.ebuild:
+  Convert sse to cpu_flags_x86_sse
 
   22 Feb 2013; Justin Lecher <jlec@gentoo.org> +files/1.35.0-gcc47.patch,
   files/1.35.0-gentoo.patch, camshift-1.35.0.ebuild, metadata.xml:
